cmake_minimum_required(VERSION 3.4.2)
PROJECT(kudu)
subdirs(src)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
link_directories(/export/ldb/kudu_build/kudu-gitlab/thirdparty/installed-deps/lib64)
link_directories(/usr/local/lib64)
find_package(kuduClient REQUIRED)
include_directories(/export/ldb/kudu_build/kudu-gitlab/thirdparty/installed-deps/include)
include_directories(SYSTEM ${KUDUCLIENT_INCLUDE_DIR} )
#include_directories(/export/ldb/kudu_build/kudu-gitlab/src/kudu/common)
include_directories(/export/ldb/kudu_build/kudu-gitlab/src)
