cmake_minimum_required(VERSION 2.8)
PROJECT(rcommander)
AUX_SOURCE_DIRECTORY(src DIR_SRCS)
set(EXECUTABLE_OUTPUT_PATH ./bin)
ADD_EXECUTABLE(rcommander  src/commandor.cc src/commandor.h src/rcommander.cc)
SET(CMAKE_CXX_FLAGS "--std=c++11 ")
ADD_EXECUTABLE(commandor-test src/commandor-test.cc src/commandor.h src/commandor.cc)
